# pico-10base-t-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RESUME.md  memory.x
.cargo/: config.toml
.claude/: settings.json
cyw43-firmware/: README.md
docs/: README.md  clock-recovery-decoder-plan.md  cpu-dpll-plan.md  full-duplex-analysis.md  low-power-plan.md  perf-characterization-plan.md  performance.md  pio-decoder-plan.md  pio-dpll-report.md  r15-plan.md  r16-plan.md  r17-plan.md  r18-plan.md  r19-plan.md  release-checklist.md  router-plan.md  rx-bulk-ceiling.md
hardware/: .gitignore  10BASE-T_Test-v2.kicad_pcb  10BASE-T_Test-v2.kicad_pro  10BASE-T_Test-v2.kicad_sch  README.md
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: conntrack.rs  crc.rs  cycles.rs  cyw43_phy.rs  dhcp_server.rs  eth_mac.rs  eth_rx.rs  eth_rx_dpll.rs  eth_rx_pio.rs  eth_tx.rs  forward.rs  lib.rs  main.rs  manchester.rs  multicore_riscv.rs  pico_reset.rs  pio_util.rs  wan.rs  wireless.rs
tools/: 99-pico-rust.rules  README.md  cdc_read.py  conntrack_selftest.rs  lan_upload.py  r18-lan-validate.sh  rig-env.sh  router-measure.sh  router-rig-down.sh  router-rig-up.sh  router-throughput.sh  rx-decode-sweep.py  wan-test-host.sh
tools/clock-recovery/: .gitignore  README.md  analyze.py  capture.py  diag_dpll.py  harness.py  noise_compare.py  pio_dump.py
tools/dpll-rust/: Cargo.toml
tools/dpll-rust/.cargo/: config.toml
tools/dpll-rust/src/: main.rs
