[package]
name = "pico-10base-t-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "10BASE-T Ethernet TX+RX on Pico 2 (RP2350 Hazard3) using ISL3177E + magnetics"

[features]
# Verbose per-second diagnostics over USB CDC: the [Mac] TX-categorization
# line, the TX/frame hex dumps, and the decoded-frame pretty-print. Off by
# default so steady-state builds stay lean (shorter log + smaller binary);
# enable with `--features diag` when bringing up a feature. The cheap [R2b]
# heartbeat + [Rx] decode summary always print.
diag = []

[dependencies]
critical-section = "1.2.0"
embedded-hal = "1.0.0"
fugit = "0.3.6"
heapless = "0.8.0"
nb = "1.0"
panic-halt = "0.2.0"
pio = "0.3.0"
rp235x-hal = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
] }
smoltcp = { version = "0.13", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-tcp",
    "auto-icmp-echo-reply",
] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
