[package]
name = "pico-10base-t-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "10BASE-T Ethernet TX+RX on Pico 2 (RP2350 Hazard3) using ISL3177E + magnetics"

[features]
# Verbose per-second diagnostics over USB CDC: the [Mac] TX-categorization
# line, the TX/frame hex dumps, and the decoded-frame pretty-print. Off by
# default so steady-state builds stay lean (shorter log + smaller binary);
# enable with `--features diag` when bringing up a feature. The cheap [R2b]
# heartbeat + [Rx] decode summary always print.
diag = []

# A/B experiment knob (FCS-ceiling triage, post-R10): swap the productized
# edge-track DPLL decoder for the pre-R10 open-loop locked-once decoder.
# Same call site, same downstream pipeline; only the per-bit sampling
# strategy changes. Default off → DPLL (today's behaviour, byte-identical
# binary). Enable for on-wire comparison against Niccle-style fixed-stride.
# See `niccle-comparison-fcs-ceiling` memory + the triage plan.
decoder-openloop = []

# A/B experiment knob (FCS-ceiling triage, experiment 5): drop the PIO
# sampler from 60 MHz (3 samples/half-bit) to 20 MHz (1 sample/half-bit),
# matching Niccle's digital pipeline exactly. Auto-implies decoder-openloop
# because edge-tracking is meaningless at 1 sample/half-bit. Tests whether
# the 60 MHz oversampling itself is what's exposing us to transient noise
# the 20 MHz fixed-stride pipeline physically can't see. See the triage plan.
sample-rate-20mhz = ["decoder-openloop"]

# A/B experiment knob (FCS-ceiling triage, experiment 6): drop sys_clk from
# the R10 240 MHz overclock back to the HAL stock 150 MHz. At 150 MHz the
# PIO dividers go back to fractional (RX ÷2.5, TX ÷7.5, ±3.3 ns jitter) but
# we lose any second-order supply-noise / VREG-margin contribution of the
# overclock. Combine with other features to map the 6-cell decoder × clock
# matrix (DPLL vs openloop vs 20 MHz openloop, each at 240 and 150 MHz).
clock-150mhz = []

# Methodology cross-check (FCS-ceiling triage, experiment 4): swap the R8
# tiny-info HTTP response for a 1 MB streaming payload on port 80. With
# this enabled, `curl http://192.168.37.24/` downloads 1 MB so we can
# measure achieved kB/s vs Niccle's 620 kB/s (which they reported at
# "0 invalid CRC"). If our throughput is in their ballpark while our FCS
# counter still reads 30-70 % fail, hypothesis #4 (their counter masks
# silent SFD-lock failures) is confirmed and the gap is paper-only.
http-bulk-test = []

[dependencies]
critical-section = "1.2.0"
embedded-hal = "1.0.0"
fugit = "0.3.6"
heapless = "0.8.0"
nb = "1.0"
panic-halt = "0.2.0"
pio = "0.3.0"
rp235x-hal = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
] }
smoltcp = { version = "0.13", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-tcp",
    "auto-icmp-echo-reply",
] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
