[package]
name = "pico-10base-t-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Software 10BASE-T Ethernet (PIO bit-bang TX + RX) and a wireless router on the Raspberry Pi Pico 2 W (RP2350 Hazard3 RISC-V)"
authors = ["mattdeeds"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattdeeds/pico-10base-t-rs"
readme = "README.md"
keywords = ["rp2350", "10base-t", "ethernet", "pio", "embedded"]
categories = ["embedded", "no-std", "network-programming"]

[features]
# Verbose per-second diagnostics over USB CDC: the [Mac] TX-categorization
# line, the TX/frame hex dumps, and the decoded-frame pretty-print. Off by
# default so steady-state builds stay lean (shorter log + smaller binary);
# enable with `--features diag` when bringing up a feature. The cheap [R2b]
# heartbeat + [Rx] decode summary always print.
diag = []

# A/B experiment knob (FCS-ceiling triage, post-R10): swap the productized
# edge-track DPLL decoder for the pre-R10 open-loop locked-once decoder.
# Same call site, same downstream pipeline; only the per-bit sampling
# strategy changes. Default off → DPLL (today's behaviour, byte-identical
# binary). Enable for on-wire comparison against Niccle-style fixed-stride.
# See `niccle-comparison-fcs-ceiling` memory + the triage plan.
decoder-openloop = []

# A/B experiment knob (FCS-ceiling triage, experiment 5): drop the PIO
# sampler from 60 MHz (3 samples/half-bit) to 20 MHz (1 sample/half-bit),
# matching Niccle's digital pipeline exactly. Auto-implies decoder-openloop
# because edge-tracking is meaningless at 1 sample/half-bit. Tests whether
# the 60 MHz oversampling itself is what's exposing us to transient noise
# the 20 MHz fixed-stride pipeline physically can't see. See the triage plan.
sample-rate-20mhz = ["decoder-openloop"]

# A/B experiment knob (FCS-ceiling triage, experiment 6): drop sys_clk from
# the R10 240 MHz overclock back to the HAL stock 150 MHz. At 150 MHz the
# PIO dividers go back to fractional (RX ÷2.5, TX ÷7.5, ±3.3 ns jitter) but
# we lose any second-order supply-noise / VREG-margin contribution of the
# overclock. Combine with other features to map the 6-cell decoder × clock
# matrix (DPLL vs openloop vs 20 MHz openloop, each at 240 and 150 MHz).
clock-150mhz = []

# Methodology cross-check (FCS-ceiling triage, experiment 4): swap the R8
# tiny-info HTTP response for a 1 MB streaming payload on port 80. With
# this enabled, `curl http://192.168.37.24/` downloads 1 MB so we can
# measure achieved kB/s vs Niccle's 620 kB/s (which they reported at
# "0 invalid CRC"). If our throughput is in their ballpark while our FCS
# counter still reads 30-70 % fail, hypothesis #4 (their counter masks
# silent SFD-lock failures) is confirmed and the gap is paper-only.
http-bulk-test = []

# Experiment: 10BASE-T full-duplex MAC mode (docs/full-duplex-analysis.md §7).
# The board's ISL3177E transceiver is full-duplex-capable; half-duplex is a MAC
# *policy*. This flag disables that policy — the carrier-sense (Phase 3d) +
# CSMA/CA backoff (Phase 3e) in eth_tx.rs — so TX no longer defers to RX carrier.
# ONLY safe when the link partner is also forced to 10M full-duplex
# (`ethtool -s <if> speed 10 duplex full autoneg off`); a duplex mismatch is
# WORSE than half-duplex. OFF by default → the production NIC binary is unchanged.
full-duplex = []

# Experiment harness for the full-duplex Tier-2 measurement
# (docs/full-duplex-analysis.md §7.3): adds a TCP *upload sink* on port 9999
# (read-drains + counts bytes, re-listens per connection) so a host can push
# bulk data INTO the device while `http-bulk-test` streams bulk OUT — i.e. drive
# the 10BT link hard in BOTH directions at once to measure the concurrent
# (H3) aggregate + the core-1 decode ceiling (H4). Also emits a `[Sink]` CDC
# line (bytes sunk + core-1 `cpu1`). Enable for BOTH the HD-bidir control and
# the FD-bidir run; combine with `full-duplex` only for the FD run. Default off
# → production NIC binary unchanged.
fd-bench = []

# Experiment (docs/rx-bulk-ceiling.md §5): clamp the 10BT IP MTU (eth_mac::MTU)
# so smoltcp advertises a small TCP MSS → peers send sub-knee segments, keeping
# inbound frames below the ~600 B on-wire clock-drift decode cliff. Tests whether
# that lifts RX-of-bulk past the ~100 KB/s ceiling without touching the decoder.
# Default off → production MTU (1500) unchanged.
mss-clamp = []

# R15a — make the 10BASE-T (WAN) side a DHCP *client* (instead of the static
# 192.168.37.24): smoltcp's dhcpv4 client gets us an upstream IP + default route
# + DNS, and the device originates a ping to 8.8.8.8 + resolves a name to prove
# it reaches the internet out the wired link. OFF by default so the production
# NIC build (static IP, all the R4–R8 host test recipes) is unchanged. The first
# of the two R15 sub-steps; R15b (`router`) unifies this under the executor
# alongside the wireless LAN — see docs/r15-plan.md.
wan-dhcp = [
    "smoltcp/socket-dhcpv4",   # DHCP client socket (proto-dhcpv4 wire codec already on)
    "smoltcp/socket-icmp",     # device-originated ping (acceptance: ping 8.8.8.8)
    "smoltcp/socket-dns",      # device-originated name resolution (acceptance: resolve a name)
]

# R15b — the router: BOTH interfaces live at once. Pulls in the wireless LAN
# stack (cyw43 + embassy executor, = `wireless`) AND the WAN-client sockets, and
# unifies them under one executor — the 10BT RX IRQ on core 1 + a `wan_task`
# (the R15a dhcpv4/icmp/dns logic, async) on core 0 beside the cyw43 LAN. OFF by
# default. NAPT/forwarding stay R16/R17. See docs/r15-plan.md §6.
router = [
    "wireless",
    "smoltcp/socket-dhcpv4",
    "smoltcp/socket-icmp",
    "smoltcp/socket-dns",
]

# The smoltcp phy::Device adapter over cyw43's NetDriver (src/cyw43_phy.rs) as
# a narrow *library* feature: just the cyw43 driver + the embassy-net-driver
# trait, NO executor/time runtime. External consumers (pico-remote-probe's
# `wifi` build) enable this to reuse the adapter while supplying their own
# runtime; the in-tree `wireless` build pulls it in below.
cyw43-phy = ["dep:cyw43", "dep:embassy-net-driver"]

# R13 — wireless router scaffolding (Pico 2 W / CYW43439). Pulls in the cyw43
# driver + the async runtime (embassy-executor arch-riscv32 + embassy-time on a
# custom rp235x-hal time-driver). OFF by default so the production 10BASE-T
# build is unchanged. Architecture = "Option A" (keep Hazard3 RISC-V, port the
# cyw43 SPI transport) — see docs/router-plan.md §4/§5.
wireless = [
    "cyw43-phy",
    "dep:cyw43",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-time-driver",
    "dep:embassy-time-queue-utils",
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-net-driver",
    # DHCP wire codec (DhcpRepr/DhcpPacket) for the LAN DHCP server (R14.4).
    # Enabled only in the wireless build so the default 10BT smoltcp set is
    # unchanged.
    "smoltcp/proto-dhcpv4",
]

[dependencies]
critical-section = "1.2.0"
cyw43 = { version = "0.7.0", default-features = false, optional = true }
# R13 wireless stack (all optional, gated by the `wireless` feature). Versions
# are pinned to the set cyw43 0.7.0 requires: embassy-time 0.5.1 → time-driver
# 0.2.2 + queue-utils 0.3. embassy-executor is decoupled from embassy-time and
# has the `arch-riscv32` backend we need for Hazard3 (see docs/router-plan §4).
embassy-executor = { version = "0.10.0", default-features = false, features = [
    "platform-riscv32",
    "executor-thread",
], optional = true }
# `generic-queue-16` = a fixed-capacity (16) timer queue that works with any
# waker, decoupled from the executor's integrated-timer storage — the robust
# choice for our hand-rolled driver on a non-embassy-rp target.
embassy-time = { version = "0.5.1", features = [
    "tick-hz-1_000_000",
    "generic-queue-16",
], optional = true }
embassy-time-driver = { version = "0.2.2", optional = true }
embassy-time-queue-utils = { version = "0.3.2", optional = true }
embassy-sync = { version = "0.8.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
# The `Driver` trait cyw43's NetDriver implements. Pinned to the exact version
# cyw43 0.7.0 uses (0.2.0) so the trait identity matches — R14.3 wraps this
# behind a noop-waker Context to expose a smoltcp phy::Device.
embassy-net-driver = { version = "0.2.0", optional = true }
embedded-hal = "1.0.0"
fugit = "0.3.6"
heapless = "0.8.0"
nb = "1.0"
panic-halt = "0.2.0"
pio = "0.3.0"
rp235x-hal = { version = "0.4.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
] }
smoltcp = { version = "0.13", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-udp",
    "socket-tcp",
    "auto-icmp-echo-reply",
] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
